<resources>
    <string name="app_name">Cicket Booking</string>
    <string name="log_out">Log Out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_to_cicket_booking">Welcome to Cicket Booking</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="my_account">My Account</string>
    <string name="or">--- OR ---</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="bookings">Booking</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="forgot_password">
        <u>Forgot Password?</u>
    </string>
    <string name="movies">Movies</string>
    <string name="cinemas">Cinemas</string>
    <string name="show_movie_description">Show Movie Description</string>
    <string name="hide_movie_description">Hide Movie Description</string>
    <string name="book_a_movie_ticket">Book a Movie Ticket</string>
    <string name="book_your_ticket">Book Your Ticket</string>
    <string name="enter_your_name_and_surname">Enter Your Name and Surname</string>
    <string name="enter_cinema_name">Enter Cinema Name</string>
    <string name="enter_movie_name">Enter Movie Name</string>
</resources>
