<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".RegisterActivity">

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="80dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
            />

            <ImageView
                    android:id="@+id/login_img"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@mipmap/ic_login_app"
                    android:contentDescription="@string/login"
                    android:layout_below="@+id/app_name"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"/>

            <TextView
                    android:id="@+id/create_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    android:layout_below="@+id/login_img"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
            />


            <EditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/mytextedit"
                    android:layout_below="@+id/create_account"
                    android:drawableStart="@drawable/ic_email_app_foreground"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    android:textAlignment="textStart"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
            />


            <EditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/mytextedit"
                    android:layout_below="@+id/email_input"
                    android:drawableStart="@drawable/ic_password_app_foreground"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:textAlignment="textStart"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
            />

            <Button
                    android:id="@+id/register_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton1"
                    android:layout_below="@+id/password_input"
                    android:text="@string/register"
                    android:textSize="20sp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="80dp"
            />

            <Button
                    android:id="@+id/have_account_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton2"
                    android:layout_below="@+id/register_btn"
                    android:text="@string/sign_in"
                    android:textSize="20sp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="60dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="80dp"
            />


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>