<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSecondaryLight"
        tools:context=".BookingActivity">

    <include
            layout="@layout/toolbar_apparent"
            android:id="@+id/booking_toolbar"
    />

    <TextView
            android:id="@+id/title_booking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/booking_toolbar"
            android:background="@drawable/background_second"
            android:textColor="@color/colorDark"
            android:textSize="23sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/book_your_ticket"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
    />

    <EditText
            android:id="@+id/booking_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_booking"
            android:background="@drawable/background_second"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            android:hint="@string/enter_your_name_and_surname"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
    />
    <EditText
            android:id="@+id/booking_cinema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/booking_name"
            android:background="@drawable/background_second"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            android:hint="@string/enter_cinema_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
    />
    <EditText
            android:id="@+id/booking_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/booking_cinema"
            android:background="@drawable/background_second"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            android:hint="@string/enter_movie_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
    />

    <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mybutton1"
            android:layout_below="@+id/booking_movie"
            android:text="Submit"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
    />

</RelativeLayout>