<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cinema"
        tools:context=".LoginActivity"
>

    <include
            layout="@layout/toolbar_transparent"
            android:id="@+id/log_toolbar"
    />
    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/log_toolbar"
    >

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_first"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
        >

            <TextView
                    android:id="@+id/sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
            />

            <EditText
                    android:id="@+id/log_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/sign_in"
                    android:background="@drawable/background_second"
                    android:drawableStart="@drawable/ic_email_app_foreground"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    android:textAlignment="textStart"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
            />

            <EditText
                    android:id="@+id/log_password_input"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_below="@+id/log_email_input"
                    android:background="@drawable/background_second"
                    android:drawableStart="@drawable/ic_password_app_foreground"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:textAlignment="textStart"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
            />

            <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton1"
                    android:layout_below="@+id/log_password_input"
                    android:text="@string/login"
                    android:textSize="20sp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="80dp"
            />


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>